--- a/style/style.css
+++ b/style/style.css
@@ -25,3 +25,25 @@ p, div
     font-family: 'Inter', sans-serif;
     font-weight: bolder;
 }
+
+
+.header{
+    display: grid; 
+    grid-template-columns: 1% 15% 6% 15% 6% 15%;
+    background-color: rgb(78, 78, 78); 
+    height: 136px;
+}
+
+.headerButton{
+    font-family: Arial, Helvetica, sans-serif;
+    width: 245px;
+    height: 80px;
+    grid-row-start: 2; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: lightgrey; 
+    font-weight: bolder;
+    font-size: larger;
+}
