--- a/style/style.css
+++ b/style/style.css
@@ -33,8 +33,20 @@ p, div
 }
 
 .headerButton{
-    font-family: Arial, Helvetica, sans-serif;
     width: 245px;
+    height: 80px;
+    grid-row-start: 2; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: lightgrey; 
+    font-weight: bolder;
+    font-size: larger;
+}
+
+.playlistButton{
+    width: 550px;
     height: 80px;
     grid-row-start: 2; 
     display: flex;
