--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@
 {
     text-align: center;
 }
+
 .centerBottom
 {
     display: flex;
@@ -16,6 +17,8 @@
     right: 0;
     left: 0;
 }
+
+
 p, div
 {
     font-family: 'Inter', sans-serif;
@@ -23,6 +26,13 @@ p, div
     color: black;
 }
 
+p{
+    margin-left: auto; 
+    margin-right: auto; 
+    width: 50%;
+    height: auto;
+    font-size: 110%
+}
 
 .header{
     display: grid; 
@@ -32,30 +42,29 @@ p, div
 }
 
 .headerButton{
-    width: 245px;
-    height: 80px;
+    width: 125%;
+    height: 75%;
     grid-row-start: 2; 
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-left: -5px;
+    margin-left: 5px;
     background-color: lightgrey; 
     font-weight: bolder;
     font-size: 40px;
 }
 
 .playlistButton{
-    width: 450px;
-    height: 80px;
-    grid-row-start: 2; 
+    width: 90%;
+    height: 75%;
+    grid-row-start: 2;
+    font-size: .95em; 
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     background-color: lightgrey; 
-    font-weight: bolder;
-    font-size: larger;
 }
 
 a{
@@ -66,7 +75,55 @@ a{
 .carousel-control-next-icon,
 .carousel-control-prev-icon {
   filter: invert(1);
-  width: 100px;
-  height: 320px;
+  width: 25%;
+  height: 50%;
+  margin-top: 25%;
+  margin-bottom: 50%;
+  padding: 100px;
 }
 
+img{
+    width: auto;
+    height: 525px;
+}
+
+
+
+@media only screen and (max-width: 1100px) {
+
+    .headerButton{
+        width: 125%;
+        height: 75%;
+        grid-row-start: 2; 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin-left: 5px;
+        background-color: lightgrey; 
+        font-weight: bolder;
+        font-size: 40px;
+    }
+
+    .playlistButton{
+        width: 90%;
+        height: 75%;
+        grid-row-start: 2;
+        font-size: .95em; 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        background-color: lightgrey; 
+    }
+
+    .carousel-control-next-icon,
+    .carousel-control-prev-icon {
+      filter: invert(1);
+      width: 100px;
+      height: 320px;
+      margin-top: 450px;
+      margin-bottom: auto;
+    }
+
+  }
